src/pipelines-as-code/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: webhooks-ingress
spec:
    rules:
        - host: pac-webhooks.k3s-aws.keskad.pl
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: el-pipelines-as-code-interceptor
                          port:
                              number: 8080
    tls:
        - hosts:
              - pac-webhooks.k3s-aws.keskad.pl
